--- a/total/Vagrantfile
+++ b/total/Vagrantfile
@@ -12,7 +12,22 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "centos-6.5"
+  config.vm.box = "total"
+
+  config.vm.define "web01" do |server|
+    config.vm.box = "web01"
+    server.vm.network "private_network", ip: "192.168.33.10"
+  end
+
+  config.vm.define "mem01" do |server|
+    config.vm.box = "web01"
+    server.vm.network "private_network", ip: "192.168.33.10"
+  end
+
+  config.vm.define "api01" do |server|
+    config.vm.box = "api01"
+    server.vm.network "private_network", ip: "192.168.33.10"
+  end
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
