--- a/centos6.5/Vagrantfile
+++ b/centos6.5/Vagrantfile
@@ -12,7 +12,13 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "centos-6.5"
+  config.vm.box = "centos6.5"
+  config.vm.network :private_network, ip: "192.168.10.10"
+
+  #config.vm.define :centos6.5 do |server|
+  #   server.vm.box = "centos6.5"
+  #   server.vm.network :private_network, ip: "192.168.10.10"
+  #end
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
