--- a/total/Vagrantfile
+++ b/total/Vagrantfile
@@ -11,7 +11,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
      web.vm.network :private_network, ip:"192.168.20.10"
      web.ssh.insert_key=false
      web.vm.provision :ansible do |ansible|
-      ansible.playbook = "../Playbook/web_server.yml"
+      ansible.playbook = "../Playbook/web_tomcat_server.yml"
+      ansible.extra_vars = {
+        hosts: "web01",
+        user: "vagrant"
+      }
       ansible.inventory_path = "hosts"
     end
   end
