--- a/Playbook/roles/common/tasks/setup.yml
+++ b/Playbook/roles/common/tasks/setup.yml
@@ -1,4 +1,4 @@
-     - include: yum.yml
+     - include: ./yum.yml
      - name: wget,vim,telnetをインストール
        yum:  name={{item}} state=latest
        with_items: 
