--- a/Playbook/roles/web/tasks/tomcat8.yml
+++ b/Playbook/roles/web/tasks/tomcat8.yml
@@ -5,11 +5,18 @@
           - java-1.8.0-openjdk-devel
 
      - name: download tomcat8
-       action: command wget http://ftp.riken.jp/net/apache/tomcat/tomcat-8/v8.0.20/bin/apache-tomcat-8.0.20.tar.gz
+       get_url: dest=/home/vagrant/ url=http://ftp.riken.jp/net/apache/tomcat/tomcat-8/v8.0.20/bin/apache-tomcat-8.0.20.tar.gz
      - name: tar tomcat8
        action: command tar zxvf apache-tomcat-8.0.20.tar.gz
+    
+     - stat: path=/usr/share/tomcat8/  
+       register: tomcat_dir_result
+     - name: tomcat8ディレクトリが存在するため削除します。
+       action: command sudo rm -Rf /usr/share/tomcat8
+       when: tomcat_dir_result.stat.exists
+
      - name:  mv tomcat8  /usr/share/tomcat8
-       action: command sudo mv ./apache-tomcat-8.0.20 /usr/share/tomcat8
+       action: command  sudo mv -f /home/vagrant/apache-tomcat-8.0.20  /usr/share/tomcat8
      - name:  tomcat8ユーザを追加
        action: command useradd -M -d /usr/share/tomcat8 tomcat8
      - name:  tomcat8のオーナー変更
