--- a/centos6.5/Vagrantfile
+++ b/centos6.5/Vagrantfile
@@ -11,9 +11,9 @@ Vagrant.configure(2) do |config|
     server.vm.box = "centos6.5"
     server.vm.network :private_network, ip:"192.168.10.10"
     server.ssh.insert_key=false
-    server.vm.provision :ansible do |ansible|
-      ansible.playbook = "../Playbook/centos6.5.yml"
-      ansible.inventory_path = "hosts"
-    end
+    #server.vm.provision :ansible do |ansible|
+    #  ansible.playbook = "../Playbook/centos6.5.yml"
+    #  ansible.inventory_path = "hosts"
+    #end
   end
 end
