tomcat8の起動スクリプト追加。 コマンドをansibleモジュールに変更

--- a/Playbook/mysql.yml
+++ b/Playbook/mysql.yml
@@ -4,3 +4,4 @@
   tasks:
      - include: ./roles/common/tasks/setup.yml
      - include: ./roles/mysql/tasks/mysql5.6.yml
+     - service: name=mysql enabled="yes" state=running
