--- a/Playbook/web_tomcat_server.yml
+++ b/Playbook/web_tomcat_server.yml
@@ -5,4 +5,4 @@
      - include: ./roles/common/tasks/setup.yml
      - include: ./roles/web/tasks/tomcat8.yml
      - name: start tomcat8
-       action: command sudo nohup /usr/share/tomcat8/bin/catalina.sh start 
+       action: command sudo nohup /etc/init.d/tomcat8 start 
