--- a/Playbook/roles/web/tasks/tomcat8.yml
+++ b/Playbook/roles/web/tasks/tomcat8.yml
@@ -3,7 +3,7 @@
      - name: download tomcat8
        get_url: dest=/home/vagrant/ url=http://ftp.riken.jp/net/apache/tomcat/tomcat-8/v8.0.21/bin/apache-tomcat-8.0.21.tar.gz
      - name: tar tomcat8
-       action: command tar zxvf apache-tomcat-8.0.20.tar.gz
+       action: command tar zxvf apache-tomcat-8.0.21.tar.gz
     
      - stat: path=/usr/share/tomcat8/  
        register: tomcat_dir_result
@@ -12,7 +12,7 @@
        when: tomcat_dir_result.stat.exists
 
      - name:  mv tomcat8  /usr/share/tomcat8
-       action: command  sudo mv -f /home/vagrant/apache-tomcat-8.0.20  /usr/share/tomcat8
+       action: command  sudo mv -f /home/vagrant/apache-tomcat-8.0.21  /usr/share/tomcat8
     
      - name:  tomcat8ユーザー作成 
        user: name=tomcat8 createhome="yes" state="present"
@@ -20,5 +20,5 @@
        file: state=directory owner="tomcat8" group="tomcat8" path=/usr/share/tomcat8 recurse="yes"
      
      - name: 起動スクリプトを作成
-       template: src=../files/tomcat8.sh  dest=/etc/init.d/tomcat8 owner=tomcat8 mode=0755
-    
+       template: src=../files/tomcat8.sh  dest=/etc/rc.d/init.d/tomcat8 owner=tomcat8 group=tomcat8 mode=0755
+   
