--- a/Playbook/roles/memcached/tasks/memcached.yml
+++ b/Playbook/roles/memcached/tasks/memcached.yml
@@ -1,3 +1,5 @@
 - name: rpmを使用して memcached!
   yum: name=http://apt.sw.be/redhat/el5/en/x86_64/rpmforge/RPMS/rpmforge-release-0.5.2-2.el5.rf.x86_64.rpm state=present
+- name: yum でmemcahedをインストール
+  yum: name=memcached state=latest
   
