--- a/total/Vagrantfile
+++ b/total/Vagrantfile
@@ -31,15 +31,32 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
      dbm.vm.network :private_network, ip:"192.168.30.10"
      dbm.ssh.insert_key=false
      dbm.vm.provision :ansible do |ansible|
-        ansible.playbook = "../Playbook/mysql.yml"
+       ansible.playbook = "../Playbook/mysql.yml"
         ansible.extra_vars = {
           hosts: "dbm01",
           user: "vagrant"
         }
         ansible.inventory_path = "hosts"
-      end
+     end
      dbm.vm.provider "virtualbox" do |v|
          v.customize ["modifyvm", :id, "--memory", 1024, "--cpus", "1", "--ioapic", "off"]
+     end
+  end
+ 
+  config.vm.define :mem01 do |mem|
+     mem.vm.box = "centos6.5"
+     mem.vm.network :private_network, ip:"192.168.40.10"
+     mem.ssh.insert_key=false
+     mem.vm.provision :ansible do |ansible|
+       ansible.playbook = "../Playbook/memcached.yml"
+        ansible.extra_vars = {
+          hosts: "mem01",
+          user: "vagrant"
+        }
+        ansible.inventory_path = "hosts"
+     end
+     mem.vm.provider "virtualbox" do |v|
+         v.customize ["modifyvm", :id, "--memory", 512, "--cpus", "1", "--ioapic", "off"]
      end
   end
 end
