--- a/total/Vagrantfile
+++ b/total/Vagrantfile
@@ -6,51 +6,51 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
-  config.vm.define :web01 do |web|
-     web.vm.box = "centos6.5"
+  config.vm.define :psweb01 do |web|
+     web.vm.box = "centos7"
      web.vm.network :private_network, ip:"192.168.20.10"
      web.ssh.insert_key=false
      web.vm.provision :ansible do |ansible|
         ansible.playbook = "../Playbook/web_tomcat_server.yml"
         ansible.extra_vars = {
-          hosts: "web01",
+          hosts: "psweb01",
           user: "vagrant"
         }
         ansible.inventory_path = "hosts"
      end
      web.vm.provider "virtualbox" do |v|
-         v.customize ["modifyvm", :id, "--memory", 1024, "--cpus", "1", "--ioapic", "off"]
+         v.customize ["modifyvm", :id, "--memory", 2024, "--cpus", "2", "--ioapic", "off"]
      end
      web.vm.synced_folder "~/git/personal-server/target",  "/usr/share/tomcat8/webapps",
          type: "rsync",
          rsync__exclude: ["maven-archiver", "maven-status", "generated-sources", "classes", "personal"]
   end
   
-  config.vm.define :dbm01 do |dbm|
-     dbm.vm.box = "centos6.5"
+  config.vm.define :psdbm01 do |dbm|
+     dbm.vm.box = "centos7"
      dbm.vm.network :private_network, ip:"192.168.30.10"
      dbm.ssh.insert_key=false
      dbm.vm.provision :ansible do |ansible|
        ansible.playbook = "../Playbook/mysql.yml"
         ansible.extra_vars = {
-          hosts: "dbm01",
+          hosts: "psdbm01",
           user: "vagrant"
         }
         ansible.inventory_path = "hosts"
      end
      dbm.vm.provider "virtualbox" do |v|
-         v.customize ["modifyvm", :id, "--memory", 512, "--cpus", "1", "--ioapic", "off"]
+         v.customize ["modifyvm", :id, "--memory", 1024, "--cpus", "1", "--ioapic", "off"]
      end
   end
 
-  config.vm.define :dbs02 do |dbs|
-     dbs.vm.box = "centos6.5"
+  config.vm.define :psdbs02 do |dbs|
+     dbs.vm.box = "centos7"
      dbs.vm.network :private_network, ip:"192.168.30.11"
      dbs.ssh.insert_key=false
      dbs.vm.provision :ansible do |ansible|
        ansible.playbook = "../Playbook/mysql.yml"
         ansible.extra_vars = {
-          hosts: "dbs02",
+          hosts: "psdbs02",
           user: "vagrant"
         }
         ansible.inventory_path = "hosts"
@@ -59,15 +59,24 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
          v.customize ["modifyvm", :id, "--memory", 512, "--cpus", "1", "--ioapic", "off"]
      end
   end
+  
+ config.vm.define :psredis01 do |redis|
+     redis.vm.box = "centos7"
+     redis.vm.network :private_network, ip:"192.168.50.10"
+     redis.ssh.insert_key=false
+     redis.vm.provider "virtualbox" do |v|
+         v.customize ["modifyvm", :id, "--memory", 1024, "--cpus", "1", "--ioapic", "off"]
+     end
+  end
  
-  config.vm.define :mem01 do |mem|
-     mem.vm.box = "centos6.5"
+  config.vm.define :psmem01 do |mem|
+     mem.vm.box = "centos7"
      mem.vm.network :private_network, ip:"192.168.40.10"
      mem.ssh.insert_key=false
      mem.vm.provision :ansible do |ansible|
        ansible.playbook = "../Playbook/memcached.yml"
         ansible.extra_vars = {
-          hosts: "mem01",
+          hosts: "psmem01",
           user: "vagrant"
         }
         ansible.inventory_path = "hosts"
