--- a/Playbook/redis.yml
+++ b/Playbook/redis.yml
@@ -4,4 +4,5 @@
   tasks:
      - include: ./roles/common/tasks/setup.yml
      - include: ./roles/redis/tasks/redis3_ins.yml
-     - service: name=redis-server enabled="yes" state=started
+    # - service: name=redis-server enabled="yes" state=started
+
