--- a/total/Vagrantfile
+++ b/total/Vagrantfile
@@ -80,14 +80,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
      redis.vm.box = "centos6.5"
      redis.vm.network :private_network, ip:"192.168.50.10"
      redis.ssh.insert_key=false
-     #redis.vm.provision :ansible do |ansible|
-     #  ansible.playbook = "../Playbook/redis.yml"
-     #   ansible.extra_vars = {
-     #     hosts: "psredis01",
-     #     user: "vagrant"
-     #   }
-     #   ansible.inventory_path = "hosts"
-     #end
+     redis.vm.provision :ansible do |ansible|
+       ansible.playbook = "../Playbook/redis.yml"
+        ansible.extra_vars = {
+          hosts: "psredis01",
+          user: "vagrant"
+        }
+        ansible.inventory_path = "hosts"
+     end
      redis.vm.provider "virtualbox" do |v|
          v.customize ["modifyvm", :id, "--memory", 1536, "--cpus", "1", "--ioapic", "off"]
      end
