--- a/Playbook/roles/redis/tasks/redis3_ins.yml
+++ b/Playbook/roles/redis/tasks/redis3_ins.yml
@@ -1,9 +1,25 @@
-- name: redis用レポジトリを取得します。
-  yum: name={{item}} state=installed
-  with_items:
-   - http://dl.fedoraproject.org/pub/epel/6/x86_64/libunwind-1.1-3.el6.x86_64.rpm
-   - http://dl.fedoraproject.org/pub/epel/6/x86_64/libunwind-devel-1.1-3.el6.x86_64.rpm
-   - http://dl.fedoraproject.org/pub/epel/6/x86_64/gperftools-libs-2.0-11.el6.3.x86_64.rpm
-   - http://rpms.famillecollet.com/enterprise/6/remi/x86_64/redis-3.0.6-1.el6.remi.x86_64.rpm
-- name: redis3.0をインストールします。
-  yum: name=redis state=latest
+#- name: libselinux-pythonをインストールします。
+#  yum: name=libselinux-python state=latest
+#
+#- name: gccをインストールします。
+#  yum: name=gcc state=latest
+
+- name: redis3.0をソースからインストールします。
+  get_url: url=http://download.redis.io/releases/redis-3.0.0.tar.gz
+           dest=/tmp/redis-3.0.0.tar.gz
+- name: redisを解凍
+  command: tar zxvf /tmp/redis-3.0.0.tar.gz chdir=/tmp/
+- name: make
+  command: make chdir=/tmp/redis-3.0.0
+- name: make install
+  command: make install chdir=/tmp/redis-3.0.0
+
+- name: redis group作成
+  group: name=redis state=present system=yes
+- name: redis user作成
+  user: name=redis group=redis createhome=no shell=/bin/false system=yes state=present
+- name: /var/db/redisディレクトリ作成
+  file: path=/var/db/redis state=directory mode=0755 group=redis owner=redis
+- name: redis.cnf作成
+  copy: src=/tmp/redis-3.0.0/redis.conf  dest=/etc/redis.conf owner=redis group=redis
+
